--- a/NotificationsWeb/Views/Notifications/Create.cshtml
+++ b/NotificationsWeb/Views/Notifications/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model NotificationsWeb.Models.Notifications
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Create";
 }
 
-<h1>View</h1>
+<h1>Create</h1>
 
 <h4>Notifications</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -18,19 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ValidFrom" class="control-label"></label>
-                <input asp-for="ValidFrom" class="form-control" />
-                <span asp-validation-for="ValidFrom" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ValidTo" class="control-label"></label>
-                <input asp-for="ValidTo" class="form-control" />
-                <span asp-validation-for="ValidTo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Repeat" class="control-label"></label>
                 <input asp-for="Repeat" class="form-control" />
                 <span asp-validation-for="Repeat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RunAtTime" class="control-label"></label>
+                <input asp-for="RunAtTime" class="form-control" />
+                <span asp-validation-for="RunAtTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
