--- a/NotificationsWeb/Views/Notifications/Delete.cshtml
+++ b/NotificationsWeb/Views/Notifications/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Repeat)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.RunAtTime)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RunAtTime)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
