--- a/NotificationsWeb/Views/Notifications/Details.cshtml
+++ b/NotificationsWeb/Views/Notifications/Details.cshtml
@@ -34,6 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Repeat)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.RunAtTime)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.RunAtTime)
+        </dd>
     </dl>
 </div>
 <div>
