--- a/NotificationsWeb/Views/Notifications/Edit.cshtml
+++ b/NotificationsWeb/Views/Notifications/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="Repeat" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RunAtTime" class="control-label"></label>
+                <input asp-for="RunAtTime" class="form-control" />
+                <span asp-validation-for="RunAtTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
