--- a/NotificationsWeb/Views/Notifications/Index.cshtml
+++ b/NotificationsWeb/Views/Notifications/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Repeat)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RunAtTime)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Repeat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RunAtTime)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
