--- a/NotificationsWeb/Views/Parameters/Delete.cshtml
+++ b/NotificationsWeb/Views/Parameters/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NotificationId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NotificationId)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
@@ -77,6 +71,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gradient)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Notification)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Notification.Name)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
