--- a/NotificationsWeb/Views/Parameters/Edit.cshtml
+++ b/NotificationsWeb/Views/Parameters/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="NotificationId" class="control-label"></label>
-                <input asp-for="NotificationId" class="form-control" />
+                <select asp-for="NotificationId" class="form-control" asp-items="ViewBag.NotificationId"></select>
                 <span asp-validation-for="NotificationId" class="text-danger"></span>
             </div>
             <div class="form-group">
