--- a/NotificationsWeb/Views/Notifications/Create.cshtml
+++ b/NotificationsWeb/Views/Notifications/Create.cshtml
@@ -18,13 +18,23 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ValidFrom" class="control-label"></label>
+                <input asp-for="ValidFrom" class="form-control" />
+                <span asp-validation-for="ValidFrom" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ValidTo" class="control-label"></label>
+                <input asp-for="ValidTo" class="form-control" />
+                <span asp-validation-for="ValidTo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Repeat" class="control-label"></label>
                 <input asp-for="Repeat" class="form-control" />
                 <span asp-validation-for="Repeat" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RunAtTime" class="control-label"></label>
-                <input asp-for="RunAtTime" class="form-control" />
+                <input type="time" asp-for="RunAtTime" class="form-control" />
                 <span asp-validation-for="RunAtTime" class="text-danger"></span>
             </div>
             <div class="form-group">
