--- a/NotificationsWeb/Views/Notifications/Edit.cshtml
+++ b/NotificationsWeb/Views/Notifications/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="RunAtTime" class="control-label"></label>
-                <input asp-for="RunAtTime" class="form-control" />
+                <input type="time" asp-for="RunAtTime" class="form-control" />
                 <span asp-validation-for="RunAtTime" class="text-danger"></span>
             </div>
             <div class="form-group">
