--- a/NotificationsWeb/Views/Notifications/Index.cshtml
+++ b/NotificationsWeb/Views/Notifications/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
@@ -34,12 +37,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
+            <td class="@(item.ValidFrom > DateTime.Now ? "red" : "green")">
                 @Html.DisplayFor(modelItem => item.ValidFrom)
             </td>
-            <td>
+            <td class="@(item.ValidTo < DateTime.Now ? "red" : "green")">
                 @Html.DisplayFor(modelItem => item.ValidTo)
             </td>
             <td>
@@ -50,7 +56,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a class="@( ViewBag.MissingParameters.Contains(item.Id) ? "red-forecolor" : "")" asp-action="EditParameters" asp-route-id="@item.Id">Parameters</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
