--- a/NotificationsWeb/Views/Parameters/Create.cshtml
+++ b/NotificationsWeb/Views/Parameters/Create.cshtml
@@ -14,7 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NotificationId" class="control-label"></label>
-                <select asp-for="NotificationId" class ="form-control" asp-items="ViewBag.NotificationId"></select>
+                <select asp-for="NotificationId" class="form-control" asp-items="ViewBag.NotificationId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NotificationText" class="control-label"></label>
+                <input asp-for="NotificationText" class="form-control" />
+                <span asp-validation-for="NotificationText" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BackgroundColor" class="control-label"></label>
