--- a/NotificationsWeb/wwwroot/css/site.css
+++ b/NotificationsWeb/wwwroot/css/site.css
@@ -54,3 +54,14 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.red {
+    background-color:lightcoral;
+}
+.green {
+    background-color:darkseagreen;
+}
+
+.red-forecolor{
+    color: red !important;
+}
